# TradeButler

./: .gitignore  APP_DESCRIPTION.md  BUILD.md  DISTRIBUTION.md  ICON_SETUP.md  INSTALLER_THEMING.md  LICENSE  LICENSE_COMPATIBILITY.md  LICENSE_RECOMMENDATION.md  NETWORKING_ARCHITECTURE.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_SHORT.md  REQUIREMENTS.md  THIRD_PARTY_LICENSES.txt  Version Change locations for each update.txt  alex_strategies.tsx  build.bat  clean-build.bat  dev.bat  dev.ps1  example-trades.csv  index.html  package-for-distribution.bat  package-lock.json  package.json  playwright.config.ts  setup.bat  setup.ps1  vite.config.ts
e2e/: analytics-mode-switch.spec.ts
scripts/: check-checklist-duplicates.js  sync-version.js
src/: App.tsx  exampleData.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  main.rs
src/components/: AnalyticsErrorBoundary.tsx  AuroraLockScreen.tsx  Calendar.tsx  ChecklistItemCaption.tsx  ChromalumeLockScreen.tsx  ColorPicker.tsx  ConfirmDialog.tsx  CustomOtherSignalsSettingsPanel.tsx  DividendForwardIncomeSummary.tsx  DividendIncomeDashboardWidget.tsx  DividendTrackerChartsPanel.tsx  DividendTrackerDashboardWidget.tsx  EmaMaJournalSettingsEditor.tsx  GalaxyBackground.tsx  GalaxyLockScreen.tsx  JournalChecklistStrategyConfigureModal.tsx  JournalCompletionFeedback.tsx  JournalRulesStrategyConfigureModal.tsx  JournalSignalAccentColorRow.tsx  JournalSignalsSettingsModal.tsx  Layout.tsx  LoadingSphere.tsx  LockScreen.tsx  (+10 more)
(+76 files in other folders)
