[package]
name = "tradebutler"
version = "1.0.0"
description = "Local trading analytics and metrics application"
authors = ["TradeButler"]
license = "Proprietary"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "path-all", "fs-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

